--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <div class="container">
         <h1>Password Generator</h1>
         <div class="password">
-            <h4>Your Password is :</h4>
-            <p></p>
+            <h4>Your New Password :</h4>
+            <p>**********</p>
         </div>
-        <button>Generate a password</button>
+        <div class="buttons">
+            <button class="reset">Reset</button>
+            <button class="generate-password">Generate a password</button>
+        </div>
+        
     </div>
     <script src="app.js"></script>
 </body>
