--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body>
     <div class="container">
         <h1>Password Generator</h1>
-        <div class="password">
-            <h4>Your New Password :</h4>
-            <p>**********</p>
-        </div>
+        <p>**********</p>      
+        <button class="generate-password">Generate a password</button>
         <div class="buttons">
+            <button class="copy">Copy</button>
             <button class="reset">Reset</button>
-            <button class="generate-password">Generate a password</button>
         </div>
         
     </div>
